--- a/templates/receita.html
+++ b/templates/receita.html
@@ -23,8 +23,8 @@
             </div>
         </div>
     </div>
-        {% include 'partials/busca.html' %}
-        {% include 'partials/menu.html' %}
+        {% include 'partials/_busca.html' %}
+        {% include 'partials/_menu.html' %}
 
 
         <!-- Receipe Slider -->
@@ -80,6 +80,6 @@
                     </div>
                 </div>
                 <!-- Ingredientes -->
-                {% include 'partials/footer.html' %}
+                {% include 'partials/_footer.html' %}
 
         {% endblock %} 
