--- a/templates/buscar.html
+++ b/templates/buscar.html
@@ -7,8 +7,9 @@
         <img src="{% static 'img/core-img/pizza.png' %}" alt="">
     </div>
 
-    {% include 'partials/busca.html' %}
-    {% include 'partials/menu.html' %}
+    {% include 'partials/_busca.html' %}
+
+    {% include 'partials/_menu.html' %}
 
     <!-- ##### Best Receipe Area Start ##### -->
     <section class="best-receipe-area">
@@ -33,10 +34,13 @@
                 </div>
                 {% endfor %}
                 {% else %}
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <p>Receita não encontrada</p>
+                    </div
                 {% endif %}
             </div>
         </div>
     </section>
     <!-- ##### Best Receipe Area End ##### -->
-    {% include 'partials/footer.html' %}
+    {% include 'partials/_footer.html' %}
     {% endblock %} 
