validando formulario e criando usuario

--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -25,7 +25,7 @@
             <div class="col-12">
                 <div class="contact-form-area">
                     <form action="{% url 'cadastro' %}" method="POST">
-                        {% csrf_token %}      <!-- Fornece proteção contra falsificação de solicitação entre sites-->
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-12 col-lg-12">
                                 <label for="nome_receita"><b>Nome completo</b></label>
